k8s/deployments/service-products-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-products
  labels:
    app: service-products
spec:
  replicas: 3
  selector:
    matchLabels:
      app: service-products
  template:
    metadata:
      labels:
        app: service-products
    spec:
      containers:
      - name: service-products
        image: localhost:5000/service-products
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service-products-service
spec:
  selector:
    app: service-products
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
