k8s/deployments/service-reviews-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-reviews-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-reviews
  template:
    metadata:
      labels:
        app: service-reviews
    spec:
      containers:
        - name: service-reviews
          image: localhost:5000/service-reviews
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 1Gi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.25"

---
apiVersion: v1
kind: Service
metadata:
  name: service-reviews-svc
spec:
  type: ClusterIP
  selector:
    app: service-reviews
  ports:
    - protocol: TCP
      port: 80
